--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 gunicorn
 Flask
-mlflow==1.5.0
-pandas
-scikit-learn
-scipy
-teradatasql==16.20.0.58
+#mlflow==1.5.0
+#pandas
+#scikit-learn
+#scipy
+#teradatasql==16.20.0.58
 cx-Oracle==7.3.0
-teradata==15.10.0.21
+#teradata==15.10.0.21
